--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           server: ${{ secrets.ftp_server }}
           username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
-          server-dir: /bala-indonesia.developer.aangps01.com/
+          server-dir: /
           exclude: "
             - **/.git*
             - **/.git*/**
