--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@4.1.0
         with:
           server: 103.179.57.110:21
-          username: ${{ secrets.ftp_username }}
+          username: ip-rama
           password: ${{ secrets.ftp_password }}
           server-dir: /
           exclude: "
